# pipelines

./: ARCHITECTURE.md
.github/workflows/: ci.yml  deploy.yml  nlp-avis.yml  scrape-ville-ideale.yml
adr/: 0001-duckdb-moteur-unique.md  0002-stockage-gcs-medaillon-parquet.md  0003-abstractions-duckpipe-plutot-que-kedro.md  0004-nodes-sur-relations-duckdb.md  0005-dataset-unique-local-et-gcs.md  0006-connexion-duckdb-partagee-par-execution.md  0007-nettoyage-reimplemente-inline.md  0008-threads-1-reproductibilite.md  0009-orchestration-cloud-run-jobs.md  0010-validation-par-base-de-reference.md  0011-acces-gcs-sans-cle-statique.md  0012-ci-cd-github-actions-wif.md  0013-serving-statique-cdn.md  0014-consolidation-export-web.md  0015-maille-quartier-iris.md  README.md  template.md
duckpipe/: .dockerignore  .gcloudignore  Dockerfile  README.md  pyproject.toml
duckpipe/deploy/: homepedia-pipeline.yaml  setup-github-wif.sh  setup-web-bucket.sh  web-cors.json
duckpipe/src/duckpipe/: __main__.py  catalog.py  catalogs.py  connection.py  export_web.py  fetch.py  fetch_climat.py  fetch_dpe.py  node.py  pipeline_registry.py  publish_web.py  quality.py  runner.py  sources.py  validation.py
duckpipe/src/duckpipe/datasets/: __init__.py  base.py  csv.py  geojson.py  json_dataset.py  memory.py  parquet.py  zip_member.py
duckpipe/src/duckpipe/pipelines/: avis.py  climat.py  codes.py  dpe.py  dvf.py  emploi.py  equipements.py  geometries.py  iris.py  prix_millesime.py  proximite_metropole.py  revenus.py  risques.py  score.py  score_quartier.py  securite.py  tourisme.py  transport.py
duckpipe/tests/: conftest.py  test_avis_gold.py  test_catalog.py  test_catalogs.py  test_cli_end_to_end.py  test_dvf_aggregates_real_data.py  test_export_web.py  test_fetch.py  test_geometries_transport_real_data.py  test_ingest_dvf_e2e.py  test_iris.py  test_lot2_real_data.py  test_lot3_real_data.py  test_lot4_real_data.py  test_node_pipeline.py  test_publish_web.py  test_score_real_data.py  test_validation.py
duckpipe/tests/datasets/: test_csv.py  test_parquet.py
dvf/: .dockerignore  .gitignore  .sdkmanrc  Dockerfile  README.md  pyproject.toml  requirements.txt
dvf/conf/base/: catalog.yml  parameters.yml  spark.yml
dvf/conf/docker/: credentials.yml  spark.yml
dvf/docs/source/: conf.py  index.rst
dvf/notebooks/: exploration.ipynb  profiling_geo_dvf.ipynb
dvf/scripts/: profiling_geo_dvf.py
dvf/src/dvf/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  schema.py  settings.py
dvf/src/dvf/pipelines/choropleth/: __init__.py  nodes.py  pipeline.py
dvf/src/dvf/pipelines/geo/: __init__.py  nodes.py  pipeline.py
dvf/src/dvf/pipelines/gold/: __init__.py  nodes.py  pipeline.py
dvf/src/dvf/pipelines/ingestion/: __init__.py  nodes.py  pipeline.py
dvf/src/dvf/pipelines/silver/: __init__.py  nodes.py  pipeline.py
ingest/: .env.example  pyproject.toml
ingest/homepedia_ingest/: __init__.py  __main__.py  bronze.py  datagouv.py  s3.py
ingest/scripts/: ingest_politique.py  (+1 more)
transport/: .env.example  .gitignore  README.md  pyproject.toml
ville_ideale/: README.md  pyproject.toml
ville_ideale/data/: batch_10.csv  batch_14.csv  notes_communes.csv  notes_par_commune.csv  villes_ratings.json
ville_ideale/data/html_cache/: abergement-clemenciat_1001.html  abergement-de-varey_1002.html  amberieu-en-bugey_1004.html  amberieux-en-dombes_1005.html  ambleon_1006.html  ambronay_1007.html  ambutrix_1008.html  andert-et-condon_1009.html  anglefort_1010.html  apremont_1011.html  aranc_1012.html  arandas_1013.html  arbent_1014.html  arbigny_1016.html  arboys-en-bugey_1015.html  argis_1017.html  armix_1019.html  ars-sur-formans_1021.html  artemare_1022.html  asnieres-sur-saone_1023.html  attignat_1024.html  bage-dommartin_1025.html  bage-le-chatel_1026.html  balan_1027.html  baneins_1028.html  beaupont_1029.html  beauregard_1030.html  beligneux_1032.html  bellegarde-sur-valserine_1033.html  belley_1034.html  belleydoux_1035.html  bellignat_1031.html  belmont-luthezieu_1036.html  benonces_1037.html  beny_1038.html  beon_1039.html  bereziat_1040.html  bettant_1041.html  bey_1042.html  beynost_1043.html  (+5 more)
ville_ideale/homepedia_ville_ideale/: __init__.py  scraper.py
ville_ideale/homepedia_ville_ideale/nlp/: __init__.py  __main__.py  extract.py  runner.py  segmenter.py  sentiment.py  themes.py
ville_ideale/scripts/: build_wordcloud.py  ingest_ville_ideale.py  scrape_local.py  scrape_top80.py  scrape_ville_ideale.py
ville_ideale/tests/: test_build_offline.py  test_scraper.py  test_segmenter.py  test_sentiment.py  test_themes.py
ville_ideale/tests/fixtures/: avis_mini.csv
webapp_export/: export_charts.py  export_score_geojson.py
(+5 files in other folders)
