[project]
name = "duckpipe"
version = "0.1.0"
description = "Abstractions Dataset et Pipeline/Node sur DuckDB pour l'industrialisation des traitements Homepedia"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
]

[project.optional-dependencies]
gcs = [
    "google-cloud-storage>=2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckpipe"]
